--- a/SecureApp/src/main/resources/application.properties
+++ b/SecureApp/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/projects
 spring.datasource.username=root
-spring.datasource.password=kuldeep@mysql
+spring.datasource.password=<password>
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 
-security.oauth2.client.client-id=601487321851-te22akcqiihfmvvs250pq0uvqtj4gi2i.apps.googleusercontent.com
-security.oauth2.client.client-secret=Wr-1yZQsgUtW9OAkthIhZK8C
+security.oauth2.client.client-id=<client id>
+security.oauth2.client.client-secret=<client-secret>
 security.oauth2.client.access-tokenUri=https://www.googleapis.com/oauth2/v3/token
 security.oauth2.client.userAuthorizationUri: https://accounts.google.com/o/oauth2/auth
 security.oauth2.client.tokenName: oauth_token
